--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v*'
+
 jobs:
   Create_release:
     runs-on: ubuntu-latest
@@ -12,14 +13,5 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: Release ${{ github.ref }}
-          draft: false
-          prerelease: false
+      - name: Release
+        uses: softprops/action-gh-release@v2
